fix for flicker
added animation-fill-mode to ensure last keyframe is displayed until the
dialog is removed. display none is added to the last keyframe to hide
it.

--- a/css/ngDialog-theme-default.css
+++ b/css/ngDialog-theme-default.css
@@ -37,6 +37,7 @@
 
   100% {
     opacity: 0;
+    display:none;
     -webkit-transform: translateY(-40px);
     transform: translateY(-40px);
   }
@@ -52,6 +53,7 @@
 
   100% {
     opacity: 0;
+    display:none;
     -webkit-transform: translateY(-40px);
     -ms-transform: translateY(-40px);
     transform: translateY(-40px);
@@ -64,8 +66,8 @@
 }
 
 .ngdialog.ngdialog-theme-default.ngdialog-closing .ngdialog-content {
-  -webkit-animation: ngdialog-flyout .5s;
-  animation: ngdialog-flyout .5s;
+  -webkit-animation: ngdialog-flyout .5s forwards;
+  animation: ngdialog-flyout .5s forwards;
 }
 
 .ngdialog.ngdialog-theme-default .ngdialog-content {
