--- a/css/ngDialog.css
+++ b/css/ngDialog.css
@@ -15,6 +15,7 @@
 
   100% {
     opacity: 0;
+    display: none;
   }
 }
 
@@ -77,8 +78,8 @@
 
 .ngdialog.ngdialog-closing .ngdialog-overlay {
   -webkit-backface-visibility: hidden;
-  -webkit-animation: ngdialog-fadeout 0.5s;
-  animation: ngdialog-fadeout 0.5s;
+  -webkit-animation: ngdialog-fadeout 0.5s forwards;
+  animation: ngdialog-fadeout 0.5s forwards;
 }
 
 .ngdialog-content {
@@ -90,8 +91,8 @@
 
 .ngdialog.ngdialog-closing .ngdialog-content {
   -webkit-backface-visibility: hidden;
-  -webkit-animation: ngdialog-fadeout 0.5s;
-  animation: ngdialog-fadeout 0.5s;
+  -webkit-animation: ngdialog-fadeout 0.5s forwards;
+  animation: ngdialog-fadeout 0.5s forwards;
 }
 
 .ngdialog-close:before {
